--- a/manifest.json
+++ b/manifest.json
@@ -2,18 +2,22 @@
 	"manifest_version": 2,
 	"name": "311 for Addresses",
 	"version": "1.0",
-	"background": {
-		"scripts": ["popup.js"],
-		"persistent": false
-	},
 	"content_scripts": [
 		{
+			//"run_at": "document_end",
 			"matches": [
 				"<all_urls>"
 			],
-			"js": ["content.js"]
+			"js": [
+				"jquery-1.12.1.min.js"
+				//"content.js"
+			]
 		}
 	],
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": false
+	},
 	"browser_action": {
 		"default_title": "311",
 		"default_icon": "icon.png"
