--- a/manifest.json
+++ b/manifest.json
@@ -4,23 +4,24 @@
 	"version": "1.0",
 	"content_scripts": [
 		{
-			//"run_at": "document_end",
+			"run_at": "document_end",
 			"matches": [
 				"<all_urls>"
 			],
 			"js": [
-				"jquery-1.12.1.min.js"
-				//"content.js"
+				"jquery-1.12.1.min.js",
+				"content.js"
 			]
 		}
 	],
 	"background": {
 		"scripts": ["background.js"],
-		"persistent": false
+		"persistent": true
 	},
 	"browser_action": {
 		"default_title": "311",
-		"default_icon": "icon.png"
+		"default_icon": "icon.png",
+		"default_popup": "popup.html"
 	},
 	"permissions": [
 	"activeTab"
